--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.17",
