--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -27,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.2",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
     "prisma": "^5.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
