--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.1.0",
     "typescript": "^5.4.4",
     "vite": "^6.3.5"
