--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
   "dependencies": {
     "axios": "^1.6.2",
     "leaflet": "^1.9.4",
+    "libphonenumber-js": "^1.12.9",
     "mapbox-gl": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^10.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.8.1"
   },
