--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,4 @@ GMAIL_PASS=uilh tfpj xwsf ubtq
 ADMIN_EMAIL=wassim.abdayem@gmail.com
 JWT_SECRET=supersecretjwtkey
 CLIENT_URL=http://localhost:3000
-DATABASE_URL=postgresql://postgres:5432@localhost:5432/xzity
+DATABASE_URL=postgresql://neondb_owner:npg_F0QlfHR6nipX@ep-purple-sea-a1adpsww-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
