--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "country-list": "^2.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.10",
     "nodemailer": "^6.9.8",
     "socket.io": "^4.8.1"
   },
@@ -24,6 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.18",
+    "@types/country-list": "^2.1.4",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.2",
