--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "luxon": "^3.7.1"
+    "luxon": "^3.7.1",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.6.2",
+    "@types/node-fetch": "^2.6.12"
   }
 }
