--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.12.9",
+    "luxon": "^3.7.1",
     "mapbox-gl": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
