--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.10",
+    "luxon": "^3.7.1",
     "nodemailer": "^6.9.8",
     "socket.io": "^4.8.1"
   },
