--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.10",
     "luxon": "^3.7.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "socket.io": "^4.8.1"
   },
