--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,9 @@
     "@types/country-list": "^2.1.4",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^20.4.2",
+    "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.1",
     "prisma": "^5.12.0",
