--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^5.12.0",
@@ -39,5 +40,6 @@
     "prisma": "^5.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
-  }
+  },
+  "postinstall": "prisma generate"
 }
