--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,7 @@
     "luxon": "^3.7.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
-    "socket.io": "^4.8.1",
-    "prisma": "^5.22.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,6 +37,7 @@
     "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.1",
+    "prisma": "^5.22.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
   },
