Rename package from 'xzity-dispatch-backend' to 'xzitydispatch-backend'

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xzity-dispatch-backend",
+  "name": "xzitydispatch-backend",
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
