--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "@prisma/client": "^5.12.0",
+    "prisma": "^5.22.0",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -23,8 +24,7 @@
     "luxon": "^3.7.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
-    "socket.io": "^4.8.1",
-    "prisma": "^5.22.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
