--- a/package.json
+++ b/package.json
@@ -1,45 +1,5 @@
 {
-  "name": "xzity-dispatch-backend",
+  "name": "xzity-dispatch",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "build": "prisma generate && tsc",
-    "start": "node dist/index.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "migrate:deploy": "prisma migrate deploy"
-  },
-  "dependencies": {
-    "prisma": "^5.22.0",
-    "@prisma/client": "^5.22.0",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "country-list": "^2.3.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "libphonenumber-js": "^1.12.10",
-    "luxon": "^3.7.1",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^6.9.8",
-    "socket.io": "^4.8.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.18",
-    "@types/country-list": "^2.1.4",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/luxon": "^3.6.2",
-    "@types/node": "^20.4.2",
-    "@types/node-fetch": "^2.6.12",
-    "@types/nodemailer": "^6.4.17",
-    "@types/socket.io": "^3.0.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.4"
-  },
-  "postinstall": "prisma generate"
+  "private": true
 }
