--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "build": "prisma generate --schema=prisma/schema.prisma && tsc",
+    "build": "npx prisma generate --schema=prisma/schema.prisma && tsc",
     "start": "node dist/index.js",
-    "prisma:generate": "prisma generate --schema=prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate dev --schema=prisma/schema.prisma",
-    "migrate:deploy": "prisma migrate deploy --schema=prisma/schema.prisma"
+    "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma",
+    "migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma"
   },
-  "dependencies": {
+   "dependencies": {
     "prisma": "^5.22.0",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
