--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
 VITE_TIMEZONEDB_API_KEY=2M4RTER6O56C
-GMAIL_USER=wassim.abdayem@gmail.com
-GMAIL_PASS=uilh tfpj xwsf ubtq
+RESEND_API_KEY=re_QqoLjc4U_5nviSzmD8znqiWsGHyF7krQ3
 ADMIN_EMAIL=wassim.abdayem@gmail.com
 JWT_SECRET=supersecretjwtkey
 CLIENT_URL=http://localhost:3000
