--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma",
     "migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma"
   },
-   "dependencies": {
-    "prisma": "^5.22.0",
+  "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -25,6 +24,8 @@
     "luxon": "^3.7.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
+    "prisma": "^5.22.0",
+    "resend": "^6.2.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
