--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 VITE_TIMEZONEDB_API_KEY=2M4RTER6O56C
 RESEND_API_KEY=re_QqoLjc4U_5nviSzmD8znqiWsGHyF7krQ3
 ADMIN_EMAIL=wassim.abdayem@gmail.com
+GMAIL_USER=wassim.abdayem@gmail.com
+GMAIL_PASS=gqyq wzle sbll btrw
 JWT_SECRET=supersecretjwtkey
 CLIENT_URL=http://localhost:3000
 DATABASE_URL=postgresql://neondb_owner:npg_F0QlfHR6nipX@ep-purple-sea-a1adpsww-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
