--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ GMAIL_USER=wassim.abdayem@gmail.com
 GMAIL_PASS=gqyq wzle sbll btrw
 JWT_SECRET=supersecretjwtkey
 CLIENT_URL=http://localhost:3000
-DATABASE_URL=postgresql://neondb_owner:npg_F0QlfHR6nipX@ep-purple-sea-a1adpsww-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+DATABASE_URL=postgresql://neondb_owner:npg_7fGNkPHFmXM3@ep-old-mountain-a48qeuxe-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
