--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "build": "npx prisma generate --schema=prisma/schema.prisma && tsc",
+    "build": "npm run prepare:db && tsc",
     "start": "node dist/index.js",
     "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma",
-    "migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma"
+    "migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma",
+    "prisma:seed": "npx ts-node prisma/seed.ts",
+    "prepare:db": "npm run migrate:deploy && npm run prisma:generate && npm run prisma:seed"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
