--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@prisma/internals": "^7.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.18",
