--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
   "private": true,
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "build": "npm run prepare:db && tsc",
+    "build": "npx prisma generate --schema=prisma/schema.prisma && tsc",
     "start": "node dist/index.js",
     "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma",
-    "migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma",
-    "prisma:seed": "npx ts-node prisma/seed.ts",
-    "prepare:db": "npm run migrate:deploy && npm run prisma:generate && npm run prisma:seed"
+    "migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
-    "@prisma/internals": "^7.2.0",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -27,7 +24,7 @@
     "luxon": "^3.7.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
-    "prisma": "^7.2.0",
+    "prisma": "^5.22.0",
     "resend": "^6.2.2",
     "socket.io": "^4.8.1"
   },
