--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma",
     "migrate:deploy": "npx prisma migrate deploy --schema=prisma/schema.prisma",
-    "prepare:db": "npm run migrate:deploy && npm run prisma:generate && npm run prisma:seed"
+    "prepare:db": "npm run migrate:deploy && npm run prisma:generate"
   },
   "dependencies": {
     "@prisma/client": "^6.19.1",
