--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -40,6 +41,7 @@
     "@types/node": "^20.19.30",
     "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.2.10",
     "@types/socket.io": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
