--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.12",
     "prisma": "^6.19.1",
+    "react": "^19.2.4",
+    "react-native": "^0.83.1",
     "resend": "^6.2.2",
     "socket.io": "^4.8.1"
   },
@@ -42,6 +44,7 @@
     "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.2.10",
+    "@types/react-native": "^0.72.8",
     "@types/socket.io": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
